[package]
name = "titan-flow"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "titan-flow"
path = "src/bin/main.rs"

[dependencies]
# --- Core Async Runtime ---
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# --- Network & TLS Identity [FR-01] ---
# ! SWAPPED: using 'rquest' for better Windows MSVC support and TLS impersonation
rquest = { version = "2.0", default-features = false, features = ["gzip", "brotli"] }
url = "2.5"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# --- Browser Automation ---
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }

# --- Data Refinery ---
scraper = "0.18"
regex = "1.10"
unicode-segmentation = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# --- Persistence ---
lancedb = "0.4"
arrow = "50.0"

# --- Governance ---
sysinfo = "0.30"
governor = "0.6"
nonzero_ext = "0.3"
