[package]
name = "titan-flow"
version = "0.1.0"
edition = "2021"
authors = ["Titan-Flow Engineering"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
# --- Core Async ---
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# --- Network [FR-01] ---
# * ADDED: 'webpki-roots' is CRITICAL for SSL verification on Windows/BoringSSL
rquest = { version = "2.0", default-features = false, features = ["gzip", "brotli", "cookies", "webpki-roots"] }
url = "2.5"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# --- Browser ---
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }

# --- Data Refinery ---
scraper = "0.18"
regex = "1.10"
unicode-segmentation = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# --- Persistence ---
lancedb = "0.4"
arrow = "50.0"

# --- Governance ---
sysinfo = "0.30"
governor = "0.6"
nonzero_ext = "0.3"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
robotstxt = "0.3"
