[package]
name = "titan-flow"
version = "0.1.0"
edition = "2021"
authors = ["Titan-Flow Engineering"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
# --- Core Async ---
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
futures = "0.3"                                                             # * ADDED: Required for StreamExt in slow_path.rs

# --- Network [FR-01] ---
# * CHANGED: Switched to reqwest+rustls to fix Windows BoringSSL/Bindgen build failures.
reqwest = { version = "0.11", default-features = false, features = [
    "gzip",
    "brotli",
    "cookies",
    "rustls-tls",
    "json",
] }
url = "2.5"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# --- Browser ---
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }

# --- Data Refinery ---
scraper = "0.18"
regex = "1.10"
unicode-segmentation = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# --- Persistence ---
lancedb = "0.4"
arrow = "50.0"

# --- Governance ---
sysinfo = "0.30"
governor = "0.6"
nonzero_ext = "0.3"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
robotstxt = "0.3"

# --- Observability ---
prometheus = "0.13"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
lazy_static = "1.4"

